2002-03-17  Stephen F. Booth  <sbooth@gnu.org>

	* Makefile.am: Make distclean in example for dist-hook
	* contrib/fcgi-test.cpp: New file
	* contrib/FCgioIO.{h,cpp}: New files
	* configure.ac: Add checks for FastCgi

2002-03-13  Stephen F. Booth  <sbooth@gnu.org>

	* doc/tutorial.tmpl: Fixed bug in complete example code 
	(bug fix submitted by sevcenko@vc.cvut.cz)

2002-03-12  Stephen F. Booth  <sbooth@gnu.org>

	* support/cgicc-config.in: Update copyright

2002-03-09  Stephen F. Booth  <sbooth@gnu.org>

	* Makefile.am: Removed DIST_SUBDIRS
	* Makefile.am: Added win and contrib to EXTRA_DIST
	* Makefile.am: Removed dist-hook section
	* configure.ac: Updated for automake-1.6
	* acconfig.h: Removed file
	* Makefile.am: Removed acconfig.h from EXTRA_DIST
	* configure.ac: Updated AC_DEFINE calls for autoconf-2.53
	* configure.ac: Use /bin/echo if doxygen is not found
	* doc/Makefile.am: Added html to EXTRA_DIST
	* doc/Makefile.am: Removed dist-hook section
	* support/Makefile.am: Removed mdate-sh from EXTRA_DIST
	* Makefile.am: Added dist-hook to remove CVS directories
	* doc/cgicc.css: Renamed to cgicc-doc.css
	* doc/images: Directory removed
	* doc/cgicc.png: New file
	* doc/Doxyfile.in: Use cgicc-doc.css stylesheet
	* doc/Doxyfile.in: Don't generate alphabetical index
	* Makefile.am: Remove autogen from example in dist-hook

2002-03-06  Stephen F. Booth  <sbooth@gnu.org>

	* support/Makefile.am: Distribute depcomp, don't distribute it

2002-03-05  Stephen F. Booth  <sbooth@gnu.org>

	* Makefile.am: Removed html dir
	* CgiEnvironment.{h,cpp}: Changed CgiInput back to CgiInput*
	* Cgicc.{h,cpp}: Changed CgiInput back to CgiInput*
	* THANKS: Thanks to Steve McAndrewsmith
	* configure.ac: Removed html dir references

2002-03-03  Stephen F. Booth  <sbooth@gnu.or>

	* cgicc/CgiInput.h: Added copy construcor, operator=, 
	operator==, operator!=
	* CgiEnvironment.cpp: Got rid of static CgiInput*
	* CgiEnvironment.{h,cpp}: Changed CgiInput* to CgiInput