@@ -1,10 +1,17 @@
-## $Id: Makefile.am,v 1.3 2002/03/17 20:56:37 sbooth Exp $
+## $Id: Makefile.am,v 1.4 2002/03/17 21:39:46 sbooth Exp $
 
 CLEANFILES = *~
 
 EXTRA_DIST = FCgiIO.h
+EXTRA_PROGRAMS = fcgi-test.cgi
 
-noinst_PROGRAMS = nph-hello.cgi nph-login.cgi fcgi-test.cgi
+if FCGI_DEMOS
+FCGI_TEST = fcgi-test.cgi
+else
+FCGI_TEST = 
+endif
+
+noinst_PROGRAMS = nph-hello.cgi nph-login.cgi $(FCGI_TEST)
 
 INCLUDES = -I$(top_srcdir) -I$(top_builddir)
 
